--- a/PiggyPatchwork/View/Base.lproj/Main.storyboard
+++ b/PiggyPatchwork/View/Base.lproj/Main.storyboard
@@ -53,7 +53,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.81568627450980391" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.81568627449999997" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="n6Q-8Q-B6S" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0pu-pa-fQ9"/>
                             <constraint firstItem="n6Q-8Q-B6S" firstAttribute="top" secondItem="WyR-M8-wYU" secondAttribute="bottom" id="66B-nc-Oiu"/>
@@ -69,6 +69,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="collectionView" destination="n6Q-8Q-B6S" id="UqM-k4-PB4"/>
                         <outlet property="selectionView" destination="WyR-M8-wYU" id="AqP-nH-I7B"/>
                     </connections>
                 </viewController>
