--- a/PiggyPatchwork/View/Base.lproj/Main.storyboard
+++ b/PiggyPatchwork/View/Base.lproj/Main.storyboard
@@ -20,7 +20,25 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HZa-86-RcU">
                                 <rect key="frame" x="20" y="94" width="374" height="492"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2BI-tI-vHX">
+                                        <rect key="frame" x="20" y="20" width="157" height="452"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jky-1E-qXX">
+                                        <rect key="frame" x="197" y="20" width="157" height="452"/>
+                                    </imageView>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="jky-1E-qXX" firstAttribute="leading" secondItem="2BI-tI-vHX" secondAttribute="trailing" constant="20" id="4mU-JS-ah7"/>
+                                    <constraint firstAttribute="bottom" secondItem="jky-1E-qXX" secondAttribute="bottom" constant="20" id="Cp6-Qt-hm6"/>
+                                    <constraint firstItem="2BI-tI-vHX" firstAttribute="top" secondItem="HZa-86-RcU" secondAttribute="top" constant="20" id="KfY-vJ-9ls"/>
+                                    <constraint firstItem="jky-1E-qXX" firstAttribute="top" secondItem="HZa-86-RcU" secondAttribute="top" constant="20" id="XnK-UB-EGy"/>
+                                    <constraint firstAttribute="trailing" secondItem="jky-1E-qXX" secondAttribute="trailing" constant="20" id="f2v-Yv-k4e"/>
+                                    <constraint firstAttribute="bottom" secondItem="2BI-tI-vHX" secondAttribute="bottom" constant="20" id="i0Y-w8-Oau"/>
+                                    <constraint firstItem="2BI-tI-vHX" firstAttribute="leading" secondItem="HZa-86-RcU" secondAttribute="leading" constant="20" id="sUk-8l-ZlQ"/>
+                                    <constraint firstItem="2BI-tI-vHX" firstAttribute="width" secondItem="jky-1E-qXX" secondAttribute="width" id="zkt-YM-1Kt"/>
+                                </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="n6Q-8Q-B6S">
                                 <rect key="frame" x="0.0" y="746" width="414" height="150"/>
