--- a/PiggyPatchwork/View/Base.lproj/Main.storyboard
+++ b/PiggyPatchwork/View/Base.lproj/Main.storyboard
@@ -18,28 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HZa-86-RcU">
-                                <rect key="frame" x="20" y="178.5" width="374" height="373"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2BI-tI-vHX">
-                                        <rect key="frame" x="20" y="20" width="157" height="333"/>
-                                    </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jky-1E-qXX">
-                                        <rect key="frame" x="197" y="20" width="157" height="333"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="jky-1E-qXX" firstAttribute="leading" secondItem="2BI-tI-vHX" secondAttribute="trailing" constant="20" id="4mU-JS-ah7"/>
-                                    <constraint firstAttribute="bottom" secondItem="jky-1E-qXX" secondAttribute="bottom" constant="20" id="Cp6-Qt-hm6"/>
-                                    <constraint firstItem="2BI-tI-vHX" firstAttribute="top" secondItem="HZa-86-RcU" secondAttribute="top" constant="20" id="KfY-vJ-9ls"/>
-                                    <constraint firstItem="jky-1E-qXX" firstAttribute="top" secondItem="HZa-86-RcU" secondAttribute="top" constant="20" id="XnK-UB-EGy"/>
-                                    <constraint firstAttribute="trailing" secondItem="jky-1E-qXX" secondAttribute="trailing" constant="20" id="f2v-Yv-k4e"/>
-                                    <constraint firstAttribute="bottom" secondItem="2BI-tI-vHX" secondAttribute="bottom" constant="20" id="i0Y-w8-Oau"/>
-                                    <constraint firstItem="2BI-tI-vHX" firstAttribute="leading" secondItem="HZa-86-RcU" secondAttribute="leading" constant="20" id="sUk-8l-ZlQ"/>
-                                    <constraint firstItem="2BI-tI-vHX" firstAttribute="width" secondItem="jky-1E-qXX" secondAttribute="width" id="zkt-YM-1Kt"/>
-                                </constraints>
-                            </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="n6Q-8Q-B6S">
                                 <rect key="frame" x="0.0" y="746" width="414" height="150"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -55,10 +33,45 @@
                                 <cells/>
                             </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WyR-M8-wYU" customClass="SelectionView" customModule="PiggyPatchwork" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="686" width="414" height="60"/>
+                                <rect key="frame" x="0.0" y="706" width="414" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="7va-pY-YdN"/>
+                                    <constraint firstAttribute="height" constant="40" id="z44-gi-WEx"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FE3-Tr-52n">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="706"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HZa-86-RcU">
+                                        <rect key="frame" x="20" y="166" width="374" height="374"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2BI-tI-vHX">
+                                                <rect key="frame" x="20" y="20" width="157" height="334"/>
+                                            </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jky-1E-qXX">
+                                                <rect key="frame" x="197" y="20" width="157" height="334"/>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="jky-1E-qXX" firstAttribute="leading" secondItem="2BI-tI-vHX" secondAttribute="trailing" constant="20" id="4mU-JS-ah7"/>
+                                            <constraint firstAttribute="bottom" secondItem="jky-1E-qXX" secondAttribute="bottom" constant="20" id="Cp6-Qt-hm6"/>
+                                            <constraint firstItem="2BI-tI-vHX" firstAttribute="top" secondItem="HZa-86-RcU" secondAttribute="top" constant="20" id="KfY-vJ-9ls"/>
+                                            <constraint firstItem="jky-1E-qXX" firstAttribute="top" secondItem="HZa-86-RcU" secondAttribute="top" constant="20" id="XnK-UB-EGy"/>
+                                            <constraint firstAttribute="width" secondItem="HZa-86-RcU" secondAttribute="height" multiplier="1:1" id="YH1-12-JTd"/>
+                                            <constraint firstAttribute="trailing" secondItem="jky-1E-qXX" secondAttribute="trailing" constant="20" id="f2v-Yv-k4e"/>
+                                            <constraint firstAttribute="bottom" secondItem="2BI-tI-vHX" secondAttribute="bottom" constant="20" id="i0Y-w8-Oau"/>
+                                            <constraint firstItem="2BI-tI-vHX" firstAttribute="leading" secondItem="HZa-86-RcU" secondAttribute="leading" constant="20" id="sUk-8l-ZlQ"/>
+                                            <constraint firstItem="2BI-tI-vHX" firstAttribute="width" secondItem="jky-1E-qXX" secondAttribute="width" id="zkt-YM-1Kt"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.81568627449999997" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="HZa-86-RcU" firstAttribute="leading" secondItem="FE3-Tr-52n" secondAttribute="leading" constant="20" id="0Xc-rb-yHh"/>
+                                    <constraint firstItem="HZa-86-RcU" firstAttribute="centerY" secondItem="FE3-Tr-52n" secondAttribute="centerY" id="Y5g-fb-t1e"/>
+                                    <constraint firstAttribute="trailing" secondItem="HZa-86-RcU" secondAttribute="trailing" constant="20" id="heI-mL-aF8"/>
+                                    <constraint firstItem="HZa-86-RcU" firstAttribute="centerX" secondItem="FE3-Tr-52n" secondAttribute="centerX" id="shs-cf-3GW"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -66,19 +79,19 @@
                         <constraints>
                             <constraint firstItem="n6Q-8Q-B6S" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0pu-pa-fQ9"/>
                             <constraint firstItem="n6Q-8Q-B6S" firstAttribute="top" secondItem="WyR-M8-wYU" secondAttribute="bottom" id="66B-nc-Oiu"/>
-                            <constraint firstItem="HZa-86-RcU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="A6g-u1-pVF"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HZa-86-RcU" secondAttribute="trailing" constant="20" id="Fcp-ih-14b"/>
-                            <constraint firstItem="WyR-M8-wYU" firstAttribute="top" secondItem="HZa-86-RcU" secondAttribute="bottom" constant="134.5" id="Nou-jx-egc"/>
+                            <constraint firstItem="FE3-Tr-52n" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="E59-bf-FtY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FE3-Tr-52n" secondAttribute="trailing" id="Mth-E5-G0m"/>
                             <constraint firstItem="n6Q-8Q-B6S" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="SwA-zt-a7M"/>
                             <constraint firstItem="WyR-M8-wYU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="evW-GN-bVH"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WyR-M8-wYU" secondAttribute="trailing" id="fDH-3G-q9a"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="n6Q-8Q-B6S" secondAttribute="trailing" id="j3Z-NK-4CX"/>
-                            <constraint firstItem="HZa-86-RcU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="134.5" id="vwL-v2-Bua"/>
+                            <constraint firstItem="WyR-M8-wYU" firstAttribute="top" secondItem="FE3-Tr-52n" secondAttribute="bottom" id="tym-ss-SFZ"/>
+                            <constraint firstItem="FE3-Tr-52n" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yVM-CZ-xRk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="collageView" destination="HZa-86-RcU" id="FJs-br-eEA"/>
+                        <outlet property="collageView" destination="HZa-86-RcU" id="RRl-pi-6XV"/>
                         <outlet property="collectionView" destination="n6Q-8Q-B6S" id="UqM-k4-PB4"/>
                         <outlet property="selectionView" destination="WyR-M8-wYU" id="AqP-nH-I7B"/>
                     </connections>
