--- a/PiggyPatchwork/View/Base.lproj/Main.storyboard
+++ b/PiggyPatchwork/View/Base.lproj/Main.storyboard
@@ -65,10 +65,19 @@
                                             <constraint firstItem="2BI-tI-vHX" firstAttribute="width" secondItem="jky-1E-qXX" secondAttribute="width" id="zkt-YM-1Kt"/>
                                         </constraints>
                                     </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3kU-MO-UMY">
+                                        <rect key="frame" x="176" y="560" width="62" height="30"/>
+                                        <state key="normal" title="儲存照片"/>
+                                        <connections>
+                                            <action selector="savePhoto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gph-1J-JbO"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.81568627449999997" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="HZa-86-RcU" firstAttribute="leading" secondItem="FE3-Tr-52n" secondAttribute="leading" constant="20" id="0Xc-rb-yHh"/>
+                                    <constraint firstItem="3kU-MO-UMY" firstAttribute="centerX" secondItem="FE3-Tr-52n" secondAttribute="centerX" id="6O3-Me-hVj"/>
+                                    <constraint firstItem="3kU-MO-UMY" firstAttribute="top" secondItem="HZa-86-RcU" secondAttribute="bottom" constant="20" id="HNn-d6-RKi"/>
                                     <constraint firstItem="HZa-86-RcU" firstAttribute="centerY" secondItem="FE3-Tr-52n" secondAttribute="centerY" id="Y5g-fb-t1e"/>
                                     <constraint firstAttribute="trailing" secondItem="HZa-86-RcU" secondAttribute="trailing" constant="20" id="heI-mL-aF8"/>
                                     <constraint firstItem="HZa-86-RcU" firstAttribute="centerX" secondItem="FE3-Tr-52n" secondAttribute="centerX" id="shs-cf-3GW"/>
