--- a/PiggyPatchwork/View/Prototype/Emoticon/EmoticonCollectionViewCell.xib
+++ b/PiggyPatchwork/View/Prototype/Emoticon/EmoticonCollectionViewCell.xib
@@ -1,10 +1,40 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="v5U-8W-pBM" customClass="EmoticonCollectionViewCell" customModule="PiggyPatchwork" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fuC-sb-tHk">
+                        <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                    </imageView>
+                </subviews>
+            </view>
+            <constraints>
+                <constraint firstItem="fuC-sb-tHk" firstAttribute="leading" secondItem="v5U-8W-pBM" secondAttribute="leading" id="Afy-Yc-TuG"/>
+                <constraint firstAttribute="bottom" secondItem="fuC-sb-tHk" secondAttribute="bottom" id="B4F-3P-tF2"/>
+                <constraint firstItem="fuC-sb-tHk" firstAttribute="top" secondItem="v5U-8W-pBM" secondAttribute="top" id="jre-sO-Nqo"/>
+                <constraint firstAttribute="trailing" secondItem="fuC-sb-tHk" secondAttribute="trailing" id="n7S-Ap-6ii"/>
+            </constraints>
+            <viewLayoutGuide key="safeArea" id="8qI-8j-EwI"/>
+            <connections>
+                <outlet property="emoticonImageView" destination="fuC-sb-tHk" id="WiS-7t-PKa"/>
+            </connections>
+            <point key="canvasLocation" x="297" y="129"/>
+        </collectionViewCell>
     </objects>
 </document>
