--- a/PiggyPatchwork/View/Prototype/Prototype/PrototypeCollectionViewCell.xib
+++ b/PiggyPatchwork/View/Prototype/Prototype/PrototypeCollectionViewCell.xib
@@ -19,20 +19,33 @@
                 <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2bd-H5-Qqf">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0gh-Ap-ZDg">
                         <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
-                    </imageView>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2bd-H5-Qqf">
+                                <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="2bd-H5-Qqf" firstAttribute="top" secondItem="0gh-Ap-ZDg" secondAttribute="top" id="UR3-fd-8Ws"/>
+                            <constraint firstAttribute="trailing" secondItem="2bd-H5-Qqf" secondAttribute="trailing" id="fB8-TJ-Ajp"/>
+                            <constraint firstAttribute="bottom" secondItem="2bd-H5-Qqf" secondAttribute="bottom" id="foH-bL-phJ"/>
+                            <constraint firstItem="2bd-H5-Qqf" firstAttribute="leading" secondItem="0gh-Ap-ZDg" secondAttribute="leading" id="qYm-SQ-ybZ"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="2bd-H5-Qqf" secondAttribute="trailing" id="7RH-hd-AD1"/>
-                <constraint firstAttribute="bottom" secondItem="2bd-H5-Qqf" secondAttribute="bottom" id="jvL-QW-F9Q"/>
-                <constraint firstItem="2bd-H5-Qqf" firstAttribute="leading" secondItem="SD7-G8-Ncf" secondAttribute="leading" id="uXH-za-IqC"/>
-                <constraint firstItem="2bd-H5-Qqf" firstAttribute="top" secondItem="SD7-G8-Ncf" secondAttribute="top" id="zvw-Zv-ZV3"/>
+                <constraint firstItem="0gh-Ap-ZDg" firstAttribute="leading" secondItem="SD7-G8-Ncf" secondAttribute="leading" id="FUI-00-o3w"/>
+                <constraint firstItem="0gh-Ap-ZDg" firstAttribute="top" secondItem="SD7-G8-Ncf" secondAttribute="top" id="X17-ko-sIu"/>
+                <constraint firstAttribute="trailing" secondItem="0gh-Ap-ZDg" secondAttribute="trailing" id="h1I-Zl-evN"/>
+                <constraint firstAttribute="bottom" secondItem="0gh-Ap-ZDg" secondAttribute="bottom" id="r4z-lz-S7x"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Vvq-Vu-W6I"/>
             <connections>
                 <outlet property="imageView" destination="2bd-H5-Qqf" id="OI7-Lp-6Mm"/>
+                <outlet property="prototypeCellView" destination="0gh-Ap-ZDg" id="WAd-Qt-noL"/>
             </connections>
             <point key="canvasLocation" x="53.623188405797109" y="118.52678571428571"/>
         </collectionViewCell>
